--- a/part2/phonebook-app/src/style.css
+++ b/part2/phonebook-app/src/style.css
@@ -15,3 +15,12 @@
     padding: 10px;
     border-radius: 5px;
 }
+
+.messagePopDelete{
+    color: rgb(145, 99, 15);
+    background: lightgrey;
+    border-color: orange;
+    border-style: solid;
+    padding: 10px;
+    border-radius: 5px;
+}
